# mygit

./: CMakeLists.txt  README.md
include/: base.hpp  cli.hpp  data.hpp
src/: base.cpp  cli.cpp  data.cpp  main.cpp
test/: commandtest.cpp
